--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,18 +8,23 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".ListViewActivity"
             android:label="@string/app_name" >
-
         </activity>
 
         <activity android:name=".ScrollViewActivity" android:label="@string/app_name">
+        </activity>
+
+        <activity android:name=".TestListViewActivity" android:label="@string/app_name">
+
+        </activity>
+
+        <activity android:name=".MainActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
     </application>
 
